Salesforce_Server/src/objects/DeploymentDetailsInformation__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MetadataLog__c</fullName>
        <label>MetadataLog</label>
        <referenceTo>MetadataLogInformation__c</referenceTo>
        <relationshipLabel>DeploymentDetailsInformations</relationshipLabel>
        <relationshipName>DeploymentDetailsInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ApexClass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObjectTranslation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomTab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EscalationRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomePageLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ListView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchingRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickAction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoteSiteSetting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DeploymentDetailsInformation</label>
    <listViews>
        <fullName>testQueue_DeploymentDetailsInformation</fullName>
        <filterScope>Queue</filterScope>
        <label>testQueue</label>
        <queue>testQueue</queue>
    </listViews>
    <nameField>
        <displayFormat>DDI-{000000000}</displayFormat>
        <label>DeploymentDetailsInformation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeploymentDetailsInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>